k8s-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinysd-ui-deployment
  labels:
    app: tinysd-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinysd-ui
  template:
    metadata:
      labels:
        app: tinysd-ui
    spec:
      containers:
        - name: tinysd-ui
          image: vadimpastushenko7/tinysd-ui:${IMAGE_TAG}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tinysd-ui
spec:
  selector:
    app: tinysd-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinysd-api-deployment
  labels:
    app: tinysd-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinysd-api
  template:
    metadata:
      labels:
        app: tinysd-api
    spec:
      containers:
        - name: tinysd-api
          image: vadimpastushenko7/tinysd-api:${IMAGE_TAG}
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tinysd-api
spec:
  selector:
    app: tinysd-api
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinysd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinysd-ui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tinysd-api
                port:
                  number: 3000
